--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,9 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 julia = "1.6"
+LoopVectorization = "0.12.97"
+SimpleTraits = "0.9.4"
+NLsolve = "4.5.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
