--- a/Project.toml
+++ b/Project.toml
@@ -4,15 +4,15 @@ authors = ["Hantao Cui <cuihantao@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
+EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
-SimpleTraits = "699a6c99-e7fa-54fc-8d76-47d257e15c1d"
+PowerFlowData = "dd99e9e3-7471-40fc-b48d-a10501125371"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
-LoopVectorization = "0.12"
+DocStringExtensions = "0.9.3"
 NLsolve = "4"
-SimpleTraits = "0.9"
 julia = "1.6"
 
 [extras]
