--- a/Project.toml
+++ b/Project.toml
@@ -5,10 +5,14 @@ version = "0.1.0"
 
 [deps]
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
-EnumX = "4e289a0a-7415-4d19-859d-a7e5c4648b56"
+InlineStrings = "842dd82b-1e85-43dc-bf29-5d0ee9dffc48"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 PowerFlowData = "dd99e9e3-7471-40fc-b48d-a10501125371"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [compat]
 DocStringExtensions = "0.9.3"
